<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/margin"
    tools:context=".second_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/question_answer"
            android:text="@string/question_1" />

        <CheckBox
            android:id="@+id/question_1_option_1"
            style="@style/options"
            android:text="@string/question_1_option_1" />

        <CheckBox
            android:id="@+id/question_1_option_2"
            style="@style/options"
            android:text="@string/question_1_option_2" />

        <CheckBox
            android:id="@+id/question_1_option_3"
            style="@style/options"
            android:text="@string/question_1_option_3" />

        <CheckBox
            android:id="@+id/question_1_option_4"
            style="@style/options"
            android:text="@string/question_1_option_4" />

        <TextView
            style="@style/question_answer"
            android:text="@string/question_2" />

        <RadioGroup
            android:id="@+id/question_2_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_2_option_1"
                style="@style/options"
                android:text="@string/question_2_option_1" />

            <RadioButton
                android:id="@+id/question_2_option_2"
                style="@style/options"
                android:text="@string/question_2_option_2" />

            <RadioButton
                android:id="@+id/question_2_option_3"
                style="@style/options"
                android:text="@string/question_2_option_3" />

            <RadioButton
                android:id="@+id/question_2_option_4"
                style="@style/options"
                android:text="@string/question_2_option_4" />

        </RadioGroup>

        <TextView
            style="@style/question_answer"
            android:text="@string/question_3" />

        <RadioGroup
            android:id="@+id/question_3_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_3_option_1"
                style="@style/options"
                android:text="@string/question_3_option_1" />

            <RadioButton
                android:id="@+id/question_3_option_2"
                style="@style/options"
                android:text="@string/question_3_option_2" />

            <RadioButton
                android:id="@+id/question_3_option_3"
                style="@style/options"
                android:text="@string/question_3_option_3" />

            <RadioButton
                android:id="@+id/question_3_option_4"
                style="@style/options"
                android:text="@string/question_3_option_4" />

        </RadioGroup>

        <TextView
            style="@style/question_answer"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/question_4_option_1"
            style="@style/options"
            android:text="@string/question_4_option_1" />

        <CheckBox
            android:id="@+id/question_4_option_2"
            style="@style/options"
            android:text="@string/question_4_option_2" />

        <CheckBox
            android:id="@+id/question_4_option_3"
            style="@style/options"
            android:text="@string/question_4_option_3" />

        <CheckBox
            android:id="@+id/question_4_option_4"
            style="@style/options"
            android:text="@string/question_4_option_4" />


        <TextView
            style="@style/question_answer"
            android:text="@string/question_5" />

        <EditText
            android:id="@+id/question_5_answer"
            style="@style/options"
            android:hint="@string/hint" />

        <TextView
            android:id="@+id/que_5_correct_ans"
            style="@style/hidden_answer"
            android:text="@string/answer_5_text" />

        <TextView
            style="@style/question_answer"
            android:text="@string/question_6" />

        <RadioGroup
            android:id="@+id/question_6_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_6_option_1"
                style="@style/options"
                android:text="@string/question_6_option_1" />

            <RadioButton
                android:id="@+id/question_6_option_2"
                style="@style/options"
                android:text="@string/question_6_option_2" />

            <RadioButton
                android:id="@+id/question_6_option_3"
                style="@style/options"
                android:text="@string/question_6_option_3" />

            <RadioButton
                android:id="@+id/question_6_option_4"
                style="@style/options"
                android:text="@string/question_6_option_4" />

        </RadioGroup>

        <TextView
            style="@style/question_answer"
            android:text="@string/question_7" />

        <RadioGroup
            android:id="@+id/question_7_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_7_option_1"
                style="@style/options"
                android:text="@string/question_7_option_1" />

            <RadioButton
                android:id="@+id/question_7_option_2"
                style="@style/options"
                android:text="@string/question_7_option_2" />

            <RadioButton
                android:id="@+id/question_7_option_3"
                style="@style/options"
                android:text="@string/question_7_option_3" />

            <RadioButton
                android:id="@+id/question_7_option_4"
                style="@style/options"
                android:text="@string/question_7_option_4" />
        </RadioGroup>

        <TextView
            style="@style/question_answer"
            android:text="@string/question_8" />

        <EditText
            android:id="@+id/question_8_answer"
            style="@style/options"
            android:hint="@string/hint" />

        <TextView
            android:id="@+id/que_8_correct_ans"
            style="@style/hidden_answer"
            android:text="@string/answer_8_text" />

        <TextView
            style="@style/question_answer"
            android:text="@string/question_9" />

        <RadioGroup
            android:id="@+id/question_9_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question_9_option_1"
                style="@style/options"
                android:text="@string/question_9_option_1" />

            <RadioButton
                android:id="@+id/question_9_option_2"
                style="@style/options"
                android:text="@string/question_9_option_2" />

            <RadioButton
                android:id="@+id/question_9_option_3"
                style="@style/options"
                android:text="@string/question_9_option_3" />

            <RadioButton
                android:id="@+id/question_9_option_4"
                style="@style/options"
                android:text="@string/question_9_option_4" />

        </RadioGroup>

        <TextView
            style="@style/question_answer"
            android:text="@string/question_10" />

        <CheckBox
            android:id="@+id/question_10_option_1"
            style="@style/options"
            android:text="@string/question_10_option_1" />

        <CheckBox
            android:id="@+id/question_10_option_2"
            style="@style/options"
            android:text="@string/question_10_option_2" />

        <CheckBox
            android:id="@+id/question_10_option_3"
            style="@style/options"
            android:text="@string/question_10_option_3" />

        <CheckBox
            android:id="@+id/question_10_option_4"
            style="@style/options"
            android:text="@string/question_10_option_4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/submit_button"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/finish_button"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/finish_button"
                android:theme="@style/MyButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>