<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moon"
    android:fillViewport="true"
    tools:context=".first_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_top">

        <TextView
            style="@style/rule_heading"
            android:text="@string/intro" />

        <TextView
            style="@style/rules"
            android:text="@string/rule_1" />

        <TextView
            style="@style/rules"
            android:text="@string/rule_2" />

        <TextView
            style="@style/rules"
            android:text="@string/rule_3" />

        <TextView
            style="@style/rules"
            android:text="@string/rule_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/good_luck"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/app_name_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_button"
            android:layout_marginTop="@dimen/padding_button"
            android:text="@string/entry_button"
            android:theme="@style/MyButton" />
    </LinearLayout>
</ScrollView>